--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p class="name"><span class="highlight-pink">Sneha Banda</span></p>
     <p class="intro">Hi, I’m Sneha!
         I’m a high school junior from New Jersey with a passion for computer science and bioengineering. I’m the founder of Algorithmic, a nonprofit dedicated to expanding computer science education for students aged 9–12. Since launching in 2023, we've reached over 80 students—and we're just getting started!
-        Feel free to reach out at ssbanda07@gmail.com or connect with me through the links at the botoom. Thanks for stopping by! </p>
+        Feel free to reach out at ssbanda07@gmail.com or connect with me through the links at the bottom. Thanks for stopping by! </p>
     </p>
 
     <div id="projects" class="pink-background">
